<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Corrected: Changed 'src' to 'icon' and removed extra quote. -->
    <!-- Updated: Pointing to a local PNG file in your drawable folder. -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/trend"
        android:title="@string/nav_transition_History"/>

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/application"
        android:title="@string/nav_management"/>

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/user"
        android:title="@string/nav_statistics"/>
</menu>
