<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="Subscriptions" />

        <item
            android:id="@+id/nav_exchange_rates"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/exchange_rates" />

    </group>

    <!-- Divider line before logout -->
    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>